# shutong_agent

./: .gitignore  CLAUDE.md  README.md  run.bat
backend/: .env.example  main.py  pyproject.toml  requirements-dev.txt  start.bat  start.sh
backend/agents/: README.md
backend/app/: computer_use.py  config.py  profiles.py
backend/app/api/: agents_api.py  chat.py  config_api.py  deps.py  memory_api.py  session.py  skills_api.py
backend/app/core/: __init__.py  agent.py  agent_definition.py  agent_registry.py  agent_router.py  code_agent_sub.py  deep_analysis.py  hitl.py  plan_execute.py  reflection.py  search_agent.py
backend/app/mcp/: __init__.py  client.py
backend/app/memory/: __init__.py  embedding.py  manager.py  short_term.py  store.py  types.py
backend/app/models/: __init__.py  database.py  memory.py  session.py
backend/app/services/: agent_service.py
backend/app/skill/: loader.py  registry.py
backend/app/tools/: __init__.py  base.py  code_agent_tool.py  deep_analysis_tool.py  document_ops.py  file_ops.py  image_ops.py  permissions.py  sandbox.py  search.py  search_agent_tool.py  shell.py  workspace.py
backend/docs/: memory-system.md  sandbox-design.md
backend/skills/bash/: SKILL.md
backend/skills/resume-checker/: SKILL.md
backend/tests/: test_sandbox.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: ChatArea.vue  PermissionDialog.vue  SessionSidebar.vue  UserSettings.vue
frontend/src/composables/: useChat.ts  useSessions.ts
(+1 files in other folders)
