[project]
name = "shutong"
version = "0.1.0"
description = "Multi-functional intelligent agent with layered memory system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.60",
    "langchain>=0.3.15",
    "langchain-openai>=0.3.4",
    "langchain-community>=0.3.15",
    "openai>=1.70.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.19",
]

[tool.poetry]
package-mode = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
